[package]
name = "classfile-parser"
description = "A parser for Java Class files written in rust"
version = "0.5.6"
authors = ["Nick Palmer <nick@palmr.co.uk>"]
keywords = ["java", "parsing", "class", "classfile"]
categories = ["parser-implementations"]
repository = "https://github.com/MinusGix/classfile-parser"
readme = "README.md"
license = "MIT"
edition = "2021"
exclude = [".idea/**/*", "classfile-parser.iml", "java-assets/out/**/*"]


[dependencies]
nom = "5"
bitflags = "^1.2"
cesu8 = "^1.1"
smallvec = { version = "1.7", features = ["const_generics"] }
